GoT & Charles Martel.

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -327,6 +327,18 @@
         <a href="https://en.wikipedia.org/wiki/Janissaries">Janissaries</a>.
         The fighting pits of Meereen were inspired by the
         <a href="https://en.wikipedia.org/wiki/Gladiator">gladiator games</a> in Ancient Rome.
+        <br />There may be more historical inspirations than are mentioned in the above sources.
+        For example, the family name
+        <a href="https://en.wikipedia.org/wiki/List_of_A_Song_of_Ice_and_Fire_characters#House_Martell">Martell</a>
+        is almost identical to 
+        <a href="https://en.wikipedia.org/wiki/Charles_Martel">Charles Martel's</a> cognomen ("hammer"; "Martell" in German).
+        Charles Martel fought important battles against Islamic forces, which has a kind of parallel to Dorne's resistance against the Targaryens, who also come from the east.
+        Was Robert Baratheon's war hammer inspired by Charles Martel? 
+        Was the <a href="https://www.youtube.com/watch?v=nhc283pXcjQ">battle of Qohor</a>, 
+        in which Dothraki cavalry charges again and again on the Unsullied inspired by
+        the <a href="https://en.wikipedia.org/wiki/Battle_of_Tours">battle of Tours</a>,
+        in which the Islamic cavalry repeatedly charged against the Frankish infantry?
+        <!-- See Battle of Tours/Poitiers in 732: https://www.youtube.com/watch?v=q8q0PpIUN4g  -->
       </li>
       <li>History Buffs:
         <a href="https://www.youtube.com/watch?v=knGeCNaAdAU">Why Game of Thrones reads like a History Book and not a Fantasy Epic</a>
@@ -345,6 +357,7 @@
         Wiley, 2012. (320 pages).
         <a href="http://eu.wiley.com/WileyCDA/WileyTitle/productCd-1118161998.html"><abbr>ISN</abbr> 978-1-118-16199-9</a>.
       </li>
+      <!-- See also the great philosopher Sandor Clegane: "What the fuck is a Lommy?" https://www.youtube.com/watch?v=VANR3D7-TdQ -->
       <li>Rothman, Lily:
         <a href="http://time.com/104625/game-of-thrones-moon-door/">The Physics of the <i>Game of Thrones</i> “Moon Door”</a>,
         <i class="magazine">Time</i>, 19.05.2014.
