--- a/humanities/index.html
+++ b/humanities/index.html
@@ -327,18 +327,6 @@
         <a href="https://en.wikipedia.org/wiki/Janissaries">Janissaries</a>.
         The fighting pits of Meereen were inspired by the
         <a href="https://en.wikipedia.org/wiki/Gladiator">gladiator games</a> in Ancient Rome.
-        <br />There may be more historical inspirations than are mentioned in the above sources.
-        For example, the family name
-        <a href="https://en.wikipedia.org/wiki/List_of_A_Song_of_Ice_and_Fire_characters#House_Martell">Martell</a>
-        is almost identical to 
-        <a href="https://en.wikipedia.org/wiki/Charles_Martel">Charles Martel's</a> cognomen ("hammer"; "Martell" in German).
-        Charles Martel fought important battles against Islamic forces, which has a kind of parallel to Dorne's resistance against the Targaryens, who also come from the east.
-        Was Robert Baratheon's war hammer inspired by Charles Martel? 
-        Was the <a href="https://www.youtube.com/watch?v=nhc283pXcjQ">battle of Qohor</a>, 
-        in which Dothraki cavalry charges again and again on the Unsullied inspired by
-        the <a href="https://en.wikipedia.org/wiki/Battle_of_Tours">battle of Tours</a>,
-        in which the Islamic cavalry repeatedly charged against the Frankish infantry?
-        <!-- See Battle of Tours/Poitiers in 732: https://www.youtube.com/watch?v=q8q0PpIUN4g  -->
       </li>
       <li>History Buffs:
         <a href="https://www.youtube.com/watch?v=knGeCNaAdAU">Why Game of Thrones reads like a History Book and not a Fantasy Epic</a>
@@ -363,6 +351,19 @@
         <i class="magazine">Time</i>, 19.05.2014.
       </li>
     </ul>
+    <p>There may be more historical inspirations than are mentioned in the above sources.
+      For example, the family name
+      <a href="https://en.wikipedia.org/wiki/List_of_A_Song_of_Ice_and_Fire_characters#House_Martell">Martell</a>
+      is almost identical to 
+      <a href="https://en.wikipedia.org/wiki/Charles_Martel">Charles Martel's</a> cognomen ("hammer"; "Martell" in German).
+      Charles Martel fought important battles against Islamic forces, which has a kind of parallel to Dorne's resistance against the Targaryens, who also come from the east.
+      Was Robert Baratheon's war hammer inspired by Charles Martel? 
+      Was the <a href="https://www.youtube.com/watch?v=nhc283pXcjQ">battle of Qohor</a>, 
+      in which Dothraki cavalry charges again and again on the Unsullied inspired by
+      the <a href="https://en.wikipedia.org/wiki/Battle_of_Tours">battle of Tours</a>,
+      in which the Islamic cavalry repeatedly charged against the Frankish infantry?
+      (See this YouTube video about the <a href="https://www.youtube.com/watch?v=q8q0PpIUN4g">Battle of Tours/Poitiers in 732</a>.)
+    </p>
 
   </main>
 
