John Oliver on scientific studies.

--- a/science/index.html
+++ b/science/index.html
@@ -146,6 +146,10 @@
       </li>
     </ul>
 
+    <p>For a funny take on science journalism or science itself, see 
+      <a href="https://www.youtube.com/watch?v=0Rnq1NpHdmw">Last Week Tonight with John Oliver: Scientific Studies (<abbr>HBO</abbr>)</a>
+      (20 minutes, YouTube).
+    </p>
 
     <h2>About Science in General</h2>
     <ul>
@@ -493,6 +497,11 @@
           (Steven Reiss: https://en.wikipedia.org/wiki/Steven_Reiss )
     -->
 
+    <!-- @@ move to separate page on psychology: 
+      * GoCognitive: Educational tools for cognitive neuroscience: http://www.gocognitive.net/ & https://www.youtube.com/channel/UCUciTUAOsGaJiypoHHmZHuA 
+      Ego depletion in psychological research:
+      * SciShow: "Why an Entire Field of Psychology Is in Trouble" (9 minutes): https://www.youtube.com/watch?v=2MDNvKXdLEM 
+    -->
   </main>
 
   <footer>
