Science Day 24 June 2016.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -34,8 +34,9 @@
           <li><a href="../science/ioannidis.html" 
             title="Ioannidis on why most published research findings are false">John Ioannidis</a>
           </li>
-          <li><a href="../science/mathematics.html">Mathematics &amp; Statistics</a>
-          <li class="active"><a href="hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a>
+          <li class="notyet"><a href="../science/mathematics.html">Mathematics &amp; Statistics</a>
+          <li class="notyet"><a href="../science/doctoral-research.html">Dissertation / <abbr>PhD</abbr></a>
+          <li class="active"><a href="../science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a>
           </li>
         </ul>
       </li>
@@ -78,6 +79,10 @@
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2015-12-18-science-day">7th Science Day</a>,
         18 December 2015. 
+      </li>
+      <li>
+        <a href="http://events.mi.hdm-stuttgart.de/2016-06-24-8-science-day">8th Science Day</a>,
+        24 June 2016.
       </li>
     </ul>
 
@@ -276,6 +281,7 @@
         <a href="http://www.penguin.com/book/the-memory-palace-of-matteo-ricci-by-jonathan-d-spence/9780140080988"><abbr>ISBN</abbr> 9780140080988 </a>.
       </li>
     </ul>
+    <!-- @@search ResearchGate https://www.researchgate.net/search.Search.html?query=Matteo%20Ricci%20language&type=publication -->
 
     <h4>The Kangxi Emperor</h4>
     <p>The <a href="https://en.wikipedia.org/wiki/Kangxi_Emperor">Kangxi Emperor's</a> reign (1661 - 1772, 61 years)
@@ -751,22 +757,89 @@
     </ul>
 
     <h2>Psychology</h2>
+    <h3>Obedience to Authority (Milgram)</h3>
     <ul>
       <li>
         <a href="https://en.wikipedia.org/wiki/Milgram_experiment">Milgram experiment</a>
         on obedience to authority.
       </li>
+    </ul>
+    <!-- @@search ResearchGate: https://www.researchgate.net/search.Search.html?query=milgram%20obedience%20to%20authority&type=publication -->
+
+    <h3>The Stanford Prison Experiment</h3>
+    <ul>
       <li>
         <a href="https://en.wikipedia.org/wiki/Stanford_prison_experiment">Stanford prison experiment</a>.
       </li>
-      <li><a href="https://en.wikipedia.org/wiki/Chess#Psychology">Chess psychology</a>,
-        for example the research by the Dutch psychologist
-        <a href="https://en.wikipedia.org/wiki/Adriaan_de_Groot" lang="nl" hreflang="en">Adriaan de Groot</a>
-        or by the Swiss psychologist
+    </ul>
+
+    <h3>The Cognitive Pscyhology of Chess</h3>
+    <p>(Not necessarily in the sense of the following video: <a href="https://www.youtube.com/watch?v=Rvzw21_3Hs4">Chess Psychology PHENOMENAL Way to Turn Your Thinking Around &amp; WIN</a> (YouTube, 34 minutes).</p>
+    <ul>
+      <li><a href="https://en.wikipedia.org/wiki/Chess#Psychology">Chess psychology</a> on Wikipedia.
+      </li>
+      <li>The research by the Dutch psychologist
+        <a href="https://en.wikipedia.org/wiki/Adriaan_de_Groot" lang="nl" hreflang="en">Adriaan de Groot</a>.
+      </li>
+      <li>The research by the Swiss psychologist
         <a href="https://en.wikipedia.org/wiki/Fernand_Gobet">Fernand Gobet</a>.
-        (So not necessarily in the sense of the following video: <a href="https://www.youtube.com/watch?v=Rvzw21_3Hs4">Chess Psychology PHENOMENAL Way to Turn Your Thinking Around &amp; WIN</a> (YouTube, 34 minutes).
+        Many of Gobet's publications are on <a href="https://www.researchgate.net/profile/Fernand_Gobet">ResearchGate</a>.
+        <br />See also Gobet's short presentation at the
+        <a href="https://www.youtube.com/watch?v=iE6SGIjs0pU"><abbr>KVDC</abbr> London Chess and Education Conference 2013</a> (5 minutes, YouTube).
+      </li>
+      <li>Some chess clubs and associations promote the inclusion of chess in school curricula
+        because they are convinved that it has cognitive benefits that transfers to other areas.
+        <ul>
+          <li><span lang="de">Deutsche Welle</span> (English):
+            <a href="https://www.youtube.com/watch?v=PwgZlkVkzzw">Armenia: Compulsory Chess</a>
+            (7 minutes, YouTube, 2012).
+          </li>
+          <li><abbr>VOA</abbr> News:
+            <a href="https://www.youtube.com/watch?v=OkTQ9CbUjyk">Schools Recognize Benefits of Chess</a>
+            (4 minutes, YouTube, 2008).
+          </li>
+          <li>Kasparov, Garry:
+            <a href="https://www.youtube.com/watch?v=SilPT9hykdg">Kasparov on bringing chess to schools as part of modern education</a>
+            (2 minutes, YouTube, 2015).
+            <a href="https://en.wikipedia.org/wiki/Garry_Kasparov">Garry Kasparov</a> was World Chess Champion from 1986 until his retirment in 2005.
+            In 2014, he founded the 
+            <a href="http://kasparovchessfoundation.org/">Kasparov Chess Foundation</a>,
+            whose <q cite="http://kasparovchessfoundation.org/?page_id=11">mission is to bring the many educational benefits of chess to children worldwide by providing a complete chess curriculum and enrichment programs</q>.
+          </li>
+          <li>ChessVibes: 
+            <a href="https://www.youtube.com/watch?v=0GI4kCrJLik">Kasparov addresses European Parliament to get chess into schools</a>
+            (8 minutes, YouTube, 2011).
+            <br />
+            Euronews:
+            <a href="https://www.youtube.com/watch?v=bVCXlc9Tt5U">Kasparov launches "chess for schools" plan in EU</a>
+            (1 minute, YouTube, 2011).
+          </li>
+          <li>
+            <a href="http://www.chessinschools.co.uk/">Chess in Schools and Communities (<abbr>CSC</abbr>)</a>
+            is a British organisation whose mission is to
+            <q cite="http://www.chessinschools.co.uk/mission.htm">improve children's educational outcomes and foster their social development by introducing them to the game of chess in schools and inner city communities</q>.
+            <br />See also:
+            <a href="https://www.youtube.com/watch?v=efjOY_Wy9Ok">Chess in Schools and Communities</a>
+            (6 minutes, YouTube, 2013).
+          </li>
+          <li>Pomeranz, Cody:
+            <a href="https://www.youtube.com/watch?v=A3yDvM8aplY">How Chess Can Revolutionize Learning</a>
+            (8 minutes, YouTube, TEDxYale, 2013).
+          </li>
+          <li>Jayakumar, Adarsh:
+            <a href="https://www.youtube.com/watch?v=F18WryfKUvE">Chess: A Growing Force for a Changing World</a>
+            (11 minutes, YouTube, TEDxCornellU, 2015).
+          </li>
+          <li>BigThink:
+            <a href="https://www.youtube.com/watch?v=PPsd1Oketx4">Will Chess Ever Be as Popular as Poker?</a>
+            (3 minutes, YouTube, 2011):
+            Anatoly Karpov (world chess champion 1975-1985) discusses, among other things,
+            why children should learn chess.
+          </li>
+        </ul>
       </li>
     </ul>
+
   </main>
 
   <footer>
