Updated navigation (hidden vs. notyet).

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -34,7 +34,9 @@
           <li><a href="../science/ioannidis.html" 
             title="Ioannidis on why most published research findings are false">John Ioannidis</a>
           </li>
-          <li><a href="../science/mathematics.html">Mathematics &amp; Statistics</a>
+          <li class="notyet"><a href="../science/mathematics.html">Mathematics &amp; Statistics</a>
+          <li class="notyet"><a href="../science/doctoral-research.html">Dissertation / <abbr>PhD</abbr></a>
+          <li><a href="../science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a>
         </ul>
       </li>
       <li class="active"><a href="../humanities/index.html">Humanities</a>
@@ -237,6 +239,11 @@
         "Emmanuel Kant's 'Dare To Know' represented a foundational challenge to the Enlightenment. Yet, even today humanity finds it difficult to embrace new knowledge. This talk calls for the affirmation of the spirit of experimentation in every dimension of life."
       Frank Furedi: "The younger generation has been infantilised by the baby boomers", IQ2 debates, 2011: https://www.youtube.com/watch?v=c53Udp-cDgc 
     -->
+    <!-- Becker, Ernest: The Denial of Death (Free Press, 1973/1974, 1997): http://books.simonandschuster.com/The-Denial-of-Death/Ernest-Becker/9780684832401 & http://www.amazon.com/Denial-Death-Ernest-Becker/dp/0684832402/ 
+      see also:
+      * Erik Buys: "Saved from the Denial of Death?", 26.05.2016: https://erikbuys.wordpress.com/2016/05/26/the-denial-of-death/ 
+      * Ernest Becker Foundation: http://ernestbecker.org/ 
+    -->
 
     <!-- 
       * Prue Shaw: Reading Dante: From Here to Eternity. Liveright, 2015. http://www.amazon.com/Reading-Dante-Eternity-Prue-Shaw/dp/1631490060/ 
@@ -364,6 +371,7 @@
       in which the Islamic cavalry repeatedly charged against the Frankish infantry?
       (See this YouTube video about the <a href="https://www.youtube.com/watch?v=q8q0PpIUN4g">Battle of Tours/Poitiers in 732</a>.)
     </p>
+    <!-- Game of Thrones Cello Cover - Break of Reality: https://www.youtube.com/watch?v=ydRAb9cwHnA -->
 
   </main>
 
