--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li><a href="./philosophy/index.html">Philosophy</a>
         <ul>
           <li><a href="./philosophy/learningphilosophy.html">Learning Philosophy</a></li>
-          <!--li><a href="./philosophy/religion.html">Religion and Faith</a></li-->
+          <!--li class="notyet"><a href="./philosophy/religion.html">Religion and Faith</a></li-->
           <li><a href="./philosophy/hegel_gwf.html">G.W.F. Hegel</a></li>
         </ul>
       </li>
@@ -34,7 +34,9 @@
           <li><a href="./science/ioannidis.html" 
             title="Ioannidis on why most published research findings are false">John Ioannidis</a>
           </li>
-          <li><a href="./science/mathematics.html">Mathematics &amp; Statistics</a>
+          <li class="notyet"><a href="./science/mathematics.html">Mathematics &amp; Statistics</a>
+          <li class="notyet"><a href="./science/doctoral-research.html">Dissertation / <abbr>PhD</abbr></a>
+          <li><a href="./science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a>
         </ul>
       </li>
       <li><a href="./humanities/index.html">Humanities</a>
