--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -34,7 +34,9 @@
           <li><a href="../science/ioannidis.html" 
             title="Ioannidis on why most published research findings are false">John Ioannidis</a>
           </li>
-          <li><a href="../science/mathematics.html">Mathematics &amp; Statistics</a>
+          <li class="notyet"><a href="../science/mathematics.html">Mathematics &amp; Statistics</a>
+          <li class="notyet"><a href="../science/doctoral-research.html">Dissertation / <abbr>PhD</abbr></a>
+          <li><a href="../science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a>
         </ul>
       </li>
       <li><a href="../humanities/index.html">Humanities</a>
@@ -168,6 +170,7 @@
       Genevieve von Petzinger: "The Roots of Religion", TEDx Victoria: https://www.youtube.com/watch?v=4Zgwz_m7sRs / http://www.amara.org/en/videos/kO4GPJ0bFhyN/info/the-roots-of-religion-genvieve-von-petzinger-tedxvictoria/ 
         see also http://ideopsychology.com/2015/08/06/symbolic-communication-religious-squiggle-or-box-where-when/ 
     -->
+    <!-- Manwar Ali: Reclaiming Jihad (TEDx Exeter, 2016): https://www.youtube.com/watch?v=Vi8k6BG9KVk -->
     <!-- Morality without religion / secular morality: 
       Frans de Waal: "Morality without religion", TEDx Peachtree, 2011: https://www.youtube.com/watch?v=le-74R9C6Bc 
         shows examples of co-operation between animals (indicator of empathy); consolation among chimpanzees; prosocial behaviour in chimpanzees; 
