--- a/philscience/index.html
+++ b/philscience/index.html
@@ -34,7 +34,9 @@
           <li><a href="../science/ioannidis.html" 
             title="Ioannidis on why most published research findings are false">John Ioannidis</a>
           </li>
-          <li><a href="../science/mathematics.html">Mathematics &amp; Statistics</a>
+          <li class="notyet"><a href="../science/mathematics.html">Mathematics &amp; Statistics</a>
+          <li class="notyet"><a href="../science/doctoral-research.html">Dissertation / <abbr>PhD</abbr></a>
+          <li><a href="../science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a>
         </ul>
       </li>
       <li><a href="../humanities/index.html">Humanities</a>
@@ -301,6 +303,10 @@
         The video is also available on <a href="http://wn.com/john_wilkins">WN.com</a>.
         <!-- see also http://2014.scifuture.org/philosophy-of-science-what-why/ -->
         <!-- Do an image search for "scientific method" to see many different representations: https://duckduckgo.com/?q=%22scientific+method%22&iax=1&ia=images -->
+      </li>
+      <li>The Royal Institution:
+        <a href="https://www.youtube.com/watch?v=1uzsuCFUQ68">Why science is NOT 'Just a Theory'</a>
+        (4 minutes, YouTube).
       </li>
       <!-- John Wilkins: see also Jack Sanders: https://www.youtube.com/channel/UC4QD-E-UrdtGyl0XIRO0EJw/videos -->
       <!-- An Introduction to the History and Philosophy of Science  https://www.youtube.com/playlist?list=PL67E2553770A6E39E
