--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -35,6 +35,8 @@
             title="Ioannidis on why most published research findings are false">John Ioannidis</a>
           </li>
           <li class="active"><a href="../science/mathematics.html">Mathematics &amp; Statistics</a>
+          <li class="notyet"><a href="../science/doctoral-research.html">Dissertation / <abbr>PhD</abbr></a>
+          <li><a href="../science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a>
         </ul>
       </li>
       <li><a href="../humanities/index.html">Humanities</a>
@@ -53,7 +55,7 @@
         operations that has become increasingly the habit of educated peoples, a culture
         of illuminations hit upon by a fortunate turn of history that yielded the most
         effective way of learning about the real world ever conceived.</q>
-        <cite>E. O. Wison: <span class="booktitle">Consilience</span>. 
+        <cite>E. O. Wilson: <span class="booktitle">Consilience</span>. 
           Reported in Hoyt's <span class="booktitle">New Cyclopedia Of Practical Quotations</span> (1922), p. 45.
         </cite>
       </p>
@@ -83,6 +85,7 @@
       See also: 
       * Math Antics: https://www.youtube.com/user/mathantics/ 
       * UltimateAlgebra.com: https://www.youtube.com/user/UltimateAlgebraHelp ? 
+      * Hannah Fry: "What is Zero? Getting Something from Nothing" (The Royal Institution, April 2016): https://www.youtube.com/watch?v=9Y7gAzTMdMA (4 minutes)
     -->
 
 
@@ -100,6 +103,7 @@
         <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-probability-and-philosophy-9780199607617?cc=de&lang=en&"><abbr>ISBN</abbr> 9780199607617</a>.
       </li>
     </ul>
+
     <p>Articles and YouTube Videos:</p>
     <ul>
       <li>
@@ -134,6 +138,14 @@
       </li>
     </ul>
 
+    <!-- Book recommendations from ResearchGate (https://www.researchgate.net/post/What_statistical_book_do_you_prefer_of_all_time and related questions):
+      * Mildred L. Patten: Understanding Research Methods: An Overview of the Essentials (Ninth Edition). Pyrczak Publishing, 2014. 220 pages. http://www.pyrczak.com/textbooks/research-methods/understanding-research-methods 
+      * Andy Field; Jeremy Miles; Zoë Field: Discovering Statistics Using R. SAGE Publishing, 2012. 992 pages. https://uk.sagepub.com/en-gb/eur/discovering-statistics-using-r/book236067 & https://studysites.uk.sagepub.com/dsur/main.htm & https://www.youtube.com/watch?v=oqiycHADBZY & http://www.statisticshell.com/html/dsur.html 
+      * OpenIntro Statistics. Third edition, 2015. 436 pages: https://www.openintro.org/stat/textbook.php?stat_book=os 
+      * Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani: An Introduction to Statistical Learning with Applications in R. http://www-bcf.usc.edu/~gareth/ISL/ 
+      * Cochran, William G. (1977). Sampling Techniques, 3rd edn. Wiley. New York. 448 pages: http://eu.wiley.com/WileyCDA/WileyTitle/productCd-047116240X.html 
+      * William L. Hays: Statistics. 
+    -->
   </main>
 
   <footer>
