--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -34,7 +34,9 @@
           <li><a href="../science/ioannidis.html" 
             title="Ioannidis on why most published research findings are false">John Ioannidis</a>
           </li>
-          <li><a href="../science/mathematics.html">Mathematics &amp; Statistics</a>
+          <li class="notyet"><a href="../science/mathematics.html">Mathematics &amp; Statistics</a>
+          <li class="notyet"><a href="../science/doctoral-research.html">Dissertation / <abbr>PhD</abbr></a>
+          <li><a href="../science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a>
         </ul>
       </li>
       <li><a href="../humanities/index.html">Humanities</a>
@@ -791,6 +793,26 @@
         <!-- Laurence A. Moran invites Christopher DiCarlo to give many lectures in his course on critical thinking: http://sandwalk.blogspot.de/2012/09/john-wilkins-defends-philosophy-begging.html -->
       </li>
     </ul>
+    <!-- Many questions about teaching and assessing critical thinking on ResearchGate:
+      * Do you know anyone who has written a number of research (quantitative and qualitative) on critical thinking? : https://www.researchgate.net/post/Do_you_know_anyone_who_has_written_a_number_of_research_quantitative_and_qualitative_on_critical_thinking
+        - Brookfield, S.D. (2012) Teaching for Critical Thinking. Tools and Techniques to Help Students Question their Assumptions, San-Francisco, Jossey-Bass.
+        - http://www.criticalthinking.org/ 
+      * How can we promote critical thinking skills across learning areas in our classrooms? https://www.researchgate.net/post/How_can_we_promote_critical_thinking_skills_across_learning_areas_in_our_classrooms 
+        - http://www.thinkingschoolsinternational.com/ 
+      * did you ever try to assess second language or foreign language students’ critical thinking skills via California Critical Thinking Skills Test? https://www.researchgate.net/post/Hi_did_you_ever_try_to_assess_second_language_or_foreign_language_students_critical_thinking_skills_via_California_Critical_Thinking_Skills_Test
+        - see articles referenced in responses
+      * did you ever try to assess second language or foreign language students’ critical thinking skills via Watson-Glaser Critical Thinking Appraisal? https://www.researchgate.net/post/Hi_did_you_ever_try_to_assess_second_language_or_foreign_language_students_critical_thinking_skills_via_Watson-Glaser_Critical_Thinking_Appraisal 
+        - nobody appears to have done this.
+      * Problem in academic critical thinking skills: is it a thinking problem or language problem? https://www.researchgate.net/post/Problem_in_academic_critical_thinking_skills_is_it_a_thinking_problem_or_language_problem 
+      * How can I develop critical thinking abilities in my students to maximize learner empowerment and autonomy? https://www.researchgate.net/post/How_can_I_develop_critical_thinking_abilities_in_my_students_to_maximize_learner_empowerment_and_autonomy 
+      * Critical Thinking and Academic Writing : https://www.researchgate.net/post/Critical_Thinking_and_Academic_Writing 
+      * What are the ways to teach for Critical Thinking Disposition? https://www.researchgate.net/post/What_are_the_ways_to_teach_for_Critical_Thinking_Disposition 
+        - has some useful references
+        - see also "Why students do not think critically?" https://www.researchgate.net/post/Why_students_do_not_think_critically 
+      * How could develop critical thinking in students? https://www.researchgate.net/post/How_could_develop_critical_thinking_in_students
+        - !! Check "What methods have you found to be effective for helping students improve critical thinking skills? " instead: https://www.researchgate.net/post/What_methods_have_you_found_to_be_effective_for_helping_students_improve_critical_thinking_skills 
+      * Hints on strategies to develop independent and critical thinking? https://www.researchgate.net/post/Hints_on_strategies_to_develop_independent_and_critical_thinking 
+    -->
 
     <h3>Logic</h3>
     <ul>
@@ -853,6 +875,32 @@
       -->
     </ul>
 
+    <h2>Epistemology</h2>
+    <p>Since scientific knowledge is a type of knowledge, epistemology <em>should</em> be relevant to
+      philosophy of science (even though both disciplines appear to evolve independently, according to Marko Beljac). 
+      One of the problems of epistemology that appears especially relevant to philosophy of science is the
+      Gettier problem.
+    </p>
+    <ul>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/Gettier_problem">Gettier problem</a> (Wikipedia).
+      </li>
+      <li>
+        <a href="http://www.philosophy-index.com/gettier/counterexamples/">Gettier Counterexamples</a> (Philosophy Index).
+      </li>
+      <li>Hetherington, Stephen:
+        <a href="http://www.iep.utm.edu/gettier/">Gettier Problems</a>
+        (Internet Encyclopedia of Philosophy).
+      </li>
+      <li>
+        <a href="http://plato.stanford.edu/entries/knowledge-analysis/#GetPro">The Analysis of Knowledge: The Gettier Problem</a>
+        (Stanford Encyclopedia of Philosophy).
+      </li>
+      <li>Beljac, Marko:
+        <a href="http://analysans.net/the-gettier-problem-in-the-philosophy-of-science/">The Gettier Problem in the Philosophy of Science</a>,
+        <i class="blog">Analysans</i>, 12.05.2016.
+      </li>
+    </ul>
 
     <h2>Other Resources</h2>
     <ul>
