New page: Dissertation / doctoral research.

--- a/science/doctoral-research.html
+++ b/science/doctoral-research.html
@@ -3,12 +3,14 @@
 <head>
   <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
   <!--meta charset="utf-8" /--><!-- Either this line or the above! http://www.w3.org/TR/html-polyglot/ -->
+  <title>Dissertation / PhD | Philosophy and Science</title>
   <link rel="stylesheet" type="text/css" media="screen" href="../css/s_124085_triad.css" title="Three-colour scheme" />
   <link rel="stylesheet" type="text/css" media="screen" href="../css/systemcolours.css" title="System colours" />
   <link rel="stylesheet" type="text/css" media="screen" href="../css/default.css" title="No colours" />
 </head>
 <body class="sciencepage">
   <header>
+    <h1><span class="h1txt">Dissertation / <abbr>PhD</abbr></span></h1>
   </header>
 
   <nav>
