PhD page added to navigation.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             title="Ioannidis on why most published research findings are false">John Ioannidis</a>
           </li>
           <li class="notyet"><a href="./science/mathematics.html">Mathematics &amp; Statistics</a>
-          <li class="notyet"><a href="./science/doctoral-research.html">Dissertation / <abbr>PhD</abbr></a>
+          <li><a href="./science/doctoral-research.html">Dissertation / <abbr>PhD</abbr></a>
           <li><a href="./science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a>
         </ul>
       </li>
