Stephen Krashen's Monitor Model / input hypothesis.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -744,6 +744,9 @@
         <a href="https://en.wikipedia.org/wiki/Linguistic_relativity">Linguistic relativity</a>,
         also known as the Sapir–Whorf hypothesis.
       </li>
+      <li>Stephen Krashen's Monitor Model / input hypothesis
+        (<a href="http://www.sdkrashen.com/">Stephen D. Krashen's website</a>).
+      </li>
       <li>
         <a href="https://en.wikipedia.org/wiki/Conceptual_metaphor">Conceptual metaphor</a>;
         see also the book
