+ C. F. von Weizsäcker as philosopher.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -776,7 +776,7 @@
       </li>
     </ul>
 
-    <h3>The Cognitive Pscyhology of Chess</h3>
+    <h3>The Cognitive Psychology of Chess</h3>
     <p>(Not necessarily in the sense of the following video: <a href="https://www.youtube.com/watch?v=Rvzw21_3Hs4">Chess Psychology PHENOMENAL Way to Turn Your Thinking Around &amp; WIN</a> (YouTube, 34 minutes).</p>
     <ul>
       <li><a href="https://en.wikipedia.org/wiki/Chess#Psychology">Chess psychology</a> on Wikipedia.
@@ -843,6 +843,14 @@
       </li>
     </ul>
 
+    <h2>Philosophy (Including Philosophy of Science)</h2>
+    <ul>
+      <li><span lang="de">Carl Friedrich von Weizsäcker</span> as philosopher.
+        <br />See also
+        <i class="booktitle" lang="de">Carl Friedrich von Weizsäcker</i> by 
+        <span lang="de">Michael Drieschner</span> (Hamburg: Junius, 1992).
+      </li>
+    </ul>
   </main>
 
   <footer>
