Thor Heyerdahl; EC: Science in Society.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -705,6 +705,7 @@
       </li>
     </ul>
 
+    <h3>History: Other Topics</h3>
     <h4>History of Climate Change</h4>
     <ul>
       <li lang="fr">Le Roy Ladurie, Emmanuel:
@@ -731,6 +732,12 @@
       </li>
       <li>(Also check climate change and Chinese history (e.g. end of the Ming dynasty).)
       </li>
+    </ul>
+
+    <h4>Thor Heyerdahl</h4>
+    <ul>
+      <li><a href="https://en.wikipedia.org/wiki/Thor_Heyerdahl">Thor Heyerdahl</a>.</li>
+      <li>To do: find research articles that support or contradict Thor Heyerdahl's findings.</li>
     </ul>
 
     <h2 id="language">Language</h2>
@@ -849,6 +856,36 @@
         <br />See also
         <i class="booktitle" lang="de">Carl Friedrich von Weizsäcker</i> by 
         <span lang="de">Michael Drieschner</span> (Hamburg: Junius, 1992).
+      </li>
+    </ul>
+
+    <h2>Science in Society</h2>
+    <ul>
+      <li>European Commission, Directorate-General for Research and Innovation:
+        <a href="http://bookshop.europa.eu/en/ex-post-evaluation-of-science-in-society-in-fp7-pbKI0216492/">Ex-post evaluation of science in society in <abbr title="Seventh Framework Programme">FP7</abbr></a>
+        (published June/July 2016):
+        <q>The FP7 Science in Society (<abbr>SiS</abbr>) programme was part of <abbr>FP7</abbr> Capacities and 
+        had a budget of €312 million allocated for the period 2007-2013. It attracted a total of 841 proposals, 
+        of which 184 were funded. Drawing on desk-based research, CORDA/SESAM/bibliometric/network analysis, 
+        stakeholder interviews, online surveys and project case studies 
+        this ex-post evaluation assesses the rationale, design and implementation 
+        of the programme and evaluates its achievements, impacts and EU added value.</q>
+      </li>
+      <li>European Commission:
+        <a href="http://ec.europa.eu/research/swafs/pdf/pub_science_education/KI-NA-26-893-EN-N.pdf">Science Education for Responsible Citizenship</a>
+        (August 2015).
+        <q cite="http://ec.europa.eu/research/swafs/index.cfm">This publication on science education offers a 
+        21st century vision for science for society within the broader European agenda. 
+        It is the culmination of many months of work by a group of experts brought together 
+        by the European Commission in 2014. As the world becomes more inter-connected and globally competitive, 
+        new economic opportunities often come hand in hand with complex societal challenges. 
+        Therefore, we must engage all of society in research and innovation processes. 
+        We must provide the space for open, inclusive and informed discussions 
+        on the research and technology decisions that will impact citizens' lives. 
+        This report is aimed primarily at science education policy makers. 
+        It identifies the main issues involved in helping citizens to access scientific debate; 
+        it provides guidance on how industry can contribute to science education; 
+        and it proposes a new framework for all types of science education from formal, to non-formal and informal approaches.</q>
       </li>
     </ul>
   </main>
