+ The Long March.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -363,6 +363,14 @@
       </li>
     </ul>
 
+    <h4>The Long March</h4>
+    <ul>
+      <li>Harrison Salisbury: <i class="booktitle">The Long March: The Untold Story</i>. London: Macmillan, 1985.</li>
+      <li>Sun Shuyun: <i class="booktitle">The Long March</i>. Harper Perennial, 2007.
+        <abbr>ISBN</abbr> 978-0-00-719480-3.
+      </li>
+    </ul>
+
     <h4>Shen Dingyi</h4>
     <p>See <a href="https://en.wikipedia.org/wiki/Shen_Dingyi">Shěn Dìngyī</a> on Wikipedia.</p>
     <ul>
