+ Political Thought of Mao Zedong.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -380,6 +380,21 @@
       </li>
     </ul>
 
+    <h4>The Political Thought of Mao Zedong</h4>
+    <ul>
+      <li>Cheek, Timothy, <abbr>ed.</abbr>:
+        <i class="booktitle">A Critical Introduction to Mao</i>. Cambridge University Press, 2010.
+        <!-- <a href=""><abbr>ISBN</abbr> @@</a>. -->
+      </li>
+      <li>Schram, Stuart: 
+        <i class="booktitle">The Political Thought of Mao Tse-tung</i>. Enlarged and revised edition.
+        Harmondsworth: Pelican Books / Penguin Books, 1969.
+        <!-- <a href=""><abbr>ISBN</abbr> @@</a>. -->
+        (See also the 
+        <a href="http://orpheus.ucsd.edu/chinesehistory/pgp/schram2.htm">review by Zhou Guanghui</a>.)
+      </li>
+    </ul>
+
     <h4>The Great Leap Forward &amp; the Great Famine</h4>
     <p>The <a href="https://en.wikipedia.org/wiki/Great_Leap_Forward">Great Leap Forward</a> (1958-1961)
       almost coincided with the less well-known
