--- a/science/doctoral-research.html
+++ b/science/doctoral-research.html
@@ -95,6 +95,12 @@
         <a href="http://www.tandfonline.com/doi/abs/10.1080/02602938.2013.859230?src=recsys">What examiners do: what thesis students should know</a>, 
         <i class="journal">Assessment &amp; Evaluation in Higher Education</i>, Volume 39, Issue 5 (2014): 563-576 (Open Access).
       </li>
+      <li>Kennedy, Ian Geoffrey:
+        <i class="booktitle">How to do Research: Today's Tips and Tools</i>. 2016.
+        <abbr>ISBN</abbr> 978-0-620-71929-2.
+        Self-published <a href="https://www.amazon.com/How-Research-Todays-Tips-Tools-ebook/dp/B01I5JJDXC">e-book for Amazon Kindle</a>.
+        Part H of the book covers writing.
+      </li>
       <!-- 
       <li>
         <i class="booktitle"></i>.
