Mental models in chess (StackExchange).

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -871,6 +871,10 @@
           </li>
         </ul>
       </li>
+      <li>
+        <a href="http://chess.stackexchange.com/questions/14829/mental-models-in-chess">Mental models in chess</a>:
+        question on StackExchange.
+      </li>
     </ul>
 
     <h2>Philosophy (Including Philosophy of Science)</h2>
