Walden Uni: Doctoral Capstone Resources.

--- a/science/doctoral-research.html
+++ b/science/doctoral-research.html
@@ -125,6 +125,9 @@
 
     <h2>Miscellaneous Links</h2>
     <ul>
+      <li>Walden University:
+        <a href="http://academicguides.waldenu.edu/doctoralcapstoneresources">Doctoral Capstone Resources</a>.
+      </li>
       <li>Hamming, Richard: 
         <a href="http://www.newschooljournal.com/files/NSER03/05-26.pdf">You and Your Research</a>,
         <i class="journal">New School Economic Review</i>, 3.1 (2008): 5-26.
