Girard Q on Christianit Stack Exchange.

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -680,6 +680,13 @@
       </li>
     </ul>
 
+    <h2>Other Links</h2>
+    <ul>
+      <li>
+        <a href="http://christianity.stackexchange.com/questions/18474/is-the-philosophy-of-ren%C3%A9-girard-compatible-with-mainline-christianity">Is the philosophy of René Girard compatible with mainline Christianity?</a>:
+        question on Christianity Stack Exchange. 
+      </li>
+    </ul>
   </main>
 
   <footer>
