--- a/philscience/index.html
+++ b/philscience/index.html
@@ -217,6 +217,11 @@
         University of Chicago Press, 2003. (288 p.)
         <a href="http://press.uchicago.edu/ucp/books/book/chicago/T/bo3622037.html"><abbr>ISBN</abbr>  9780226300634</a>.
       </li>
+      <li>Moulines, C. Ulises: 
+        <span lang="fr"><i class="booktitle">La philosophie des sciences: l’invention d’une discipline (fin XIXe-début XXIe siècle)</i>. 
+        Paris: Éditions Rue d’Ulm/Presses de l’École normale supérieure</span>, 2006.
+        <abbr>ISBN</abbr> 2-7288-0357-9.
+      </li>
       <!-- 
         * Ladyman, James: Understanding Philosophy of Science. Routledge, 2001. 
           (In 2009, Massimo Pigliucci wrote, "Still, I'm planning to use this book next semester in a 300-level class on philosophy of science, and I'm looking forward to the puzzled reactions of my students when they'll begin to appreciate how little we understand about how science works." http://www.amazon.com/Understanding-Philosophy-Science-James-Ladyman/dp/0415221579/
