3 articles on scientific publishing

--- a/science/index.html
+++ b/science/index.html
@@ -542,7 +542,7 @@
       </li>
     </ul>
 
-    <h3>Peer Review</h3>
+    <h3>Peer Review and Scientific Publishing</h3>
     <ul>
       <li><a href="https://en.wikipedia.org/wiki/Frank_J._Tipler">Tipler, Frank J.</a>: 
         <a href="http://johndfenton.com/Documents/Tipler03-PeerReview.pdf">Refereed Journals: 
@@ -562,8 +562,21 @@
         <i class="journal">Science</i>, 341: 6152 (20 September 2013): 1331.
         (Full access to the article requires a subscription.)
       </li>
+      <li>Devlin, Hannah: 
+        <a href="https://www.theguardian.com/science/2016/sep/21/cut-throat-academia-leads-to-natural-selection-of-bad-science-claims-study">Cut-throat academia leads to 'natural selection of bad science', claims study</a>,
+        <i class="newspaper">The Guardian</i>, 21.09.2016.
+      </li>
+      <li>Smaldino, Paul E.; McElreath, Richard:
+        <a href="http://rsos.royalsocietypublishing.org/content/3/9/160384">The natural selection of bad science</a>,
+        <i class="journal">Royal Society Open Science</i>, 21.09.2016. (Published under under the terms of the Creative Commons Attribution License 4.0.)
+        <br />This is the paper discussed in Hannah Devlin's article.
+      </li>
+      <li>French, Chris:
+        <a href="https://www.theguardian.com/science/2012/mar/15/precognition-studies-curse-failed-replications">Precognition studies and the curse of the failed replications</a>,
+        <i class="newspaper">The Guardian</i>, 15.03.2012.
+      </li>
     </ul>
-    
+
     <!--h2>Science Myths</h2-->
     <!-- Mike Sutton: Spinach Iron Decimal Point Error Myth Busted. Tuesday, 21 December 2010: http://super-myths.blogspot.com.es/2010/12/spinach-iron-decimal-point-error-myth.html -->
     <!-- We use only 5% / 10% of our brain, e.g. as claimed by By Eason: https://www.youtube.com/watch?v=4Qlu3TJLJX4 
@@ -592,6 +605,9 @@
       * GoCognitive: Educational tools for cognitive neuroscience: http://www.gocognitive.net/ & https://www.youtube.com/channel/UCUciTUAOsGaJiypoHHmZHuA 
       Ego depletion in psychological research:
       * SciShow: "Why an Entire Field of Psychology Is in Trouble" (9 minutes): https://www.youtube.com/watch?v=2MDNvKXdLEM 
+    -->
+    <!-- Scientific literacy; science & research policy (politians who lack scientific literary would not be able to define a good science & research policy
+      * Christine Gorman: "What Do the Presidential Candidates Know about Science?", Scientific American, 13.09.2016: http://www.scientificamerican.com/article/what-do-the-presidential-candidates-know-about-science/ 
     -->
   </main>
 
