--- a/science/doctoral-research.html
+++ b/science/doctoral-research.html
@@ -56,7 +56,7 @@
       </p>
     </blockquote-->
 
-    <h2>Books and Articles on Doctoral Research and Thesis Writing</p>
+    <h2>Books and Articles on Doctoral Research and Thesis Writing</h2>
     <ul>
       <li>Gustavii, Björn:
         <i class="booktitle">How to Prepare a Scientific Doctoral Dissertation Based on Research Articles</i>.
